Bug 95932 - FORMATTING - incorrect background colours in .pptx document
Summary: FORMATTING - incorrect background colours in .pptx document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.0.3.2 release
Hardware: All All
: medium normal
Assignee: Matus Uzak
URL:
Whiteboard: target:5.2.0
Keywords:
: 90013 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-11-19 13:45 UTC by Owen Savill
Modified: 2025-11-14 21:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
This one renders backgrounds incorrectly (5.93 MB, application/wps-office.pptx)
2015-11-19 13:45 UTC, Owen Savill
Details
Correct background colours (9.40 MB, application/wps-office.ppt)
2015-11-19 13:47 UTC, Owen Savill
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Owen Savill 2015-11-19 13:45:46 UTC
Created attachment 120662 [details]
This one renders backgrounds incorrectly

When importing a .pptx presentation the background colour is incorrectly rendered in purple. This applies to all slides with background colour.

I asked a colleague to reduce his presentation down to just a few slides with coloured backgrounds (he has PowerPoint but I don't). In doing this he also output it in .ppt document and LibreOffice imports that one correctly.

I've attached the two documents
Comment 1 Owen Savill 2015-11-19 13:47:08 UTC
Created attachment 120663 [details]
Correct background colours
Comment 2 A (Andy) 2015-11-19 22:29:50 UTC
Reproducible with LO 5.0.3.2, Win 8.1
Comment 3 Commit Notification 2016-03-29 12:20:35 UTC
Matus Uzak committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bc14ec0f86647a39a954bd1c32b1671c22d7f475

tdf#95932: PPTX import: Incorrect inheritance of shape style

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Matus Uzak 2016-03-31 18:58:12 UTC
*** Bug 90013 has been marked as a duplicate of this bug. ***