tdf#95932: PPTX import: Incorrect inheritance of shape style

Inheritance Order: 1. Reference Shape's properties, 2. Shape style,
3. Shape properties.

You MUST NOT inherit reference shape's style, because it's already
part of inherited reference shape's properties.  That would overwrite
shape properties applied at point 3, at slide layout/master level.

Change-Id: Id1ab550295988b0087a67c6819dfe32f84825e4e