sd/qa/unit/import-tests.cxx
@@ -109,6 +109,7 @@ public:
     void testTdf93830();
     void testTdf93097();
     void testTdf62255();
+    void testTdf95932();
 
     CPPUNIT_TEST_SUITE(SdImportTest);
 
@@ -152,6 +153,7 @@ public:
     CPPUNIT_TEST(testTdf93830);
     CPPUNIT_TEST(testTdf93097);
     CPPUNIT_TEST(testTdf62255);
+    CPPUNIT_TEST(testTdf95932);
 
     CPPUNIT_TEST_SUITE_END();
 };
@@ -1190,6 +1192,24 @@ void SdImportTest::testTdf62255()
         aAny >>= aFillStyle;
         CPPUNIT_ASSERT_EQUAL(drawing::FillStyle_NONE, aFillStyle);
     }
+}
+
+void SdImportTest::testTdf95932()
+{
+    sd::DrawDocShellRef xDocShRef = loadURL(getURLFromSrc("/sd/qa/unit/data/pptx/tdf95932.pptx"), PPTX);
+
+    const SdrPage *pPage = GetPage( 1, xDocShRef );
+    SdrObject *const pObj = pPage->GetObj(2);
+    CPPUNIT_ASSERT(pObj);
+
+    const XFillStyleItem& rStyleItem = dynamic_cast<const XFillStyleItem&>(
+        pObj->GetMergedItem(XATTR_FILLSTYLE));
+    CPPUNIT_ASSERT_EQUAL(drawing::FillStyle_SOLID, rStyleItem.GetValue());
+    const XFillColorItem& rColorItem = dynamic_cast<const XFillColorItem&>(
+        pObj->GetMergedItem(XATTR_FILLCOLOR));
+    CPPUNIT_ASSERT_EQUAL(ColorData(0x76bf3d), rColorItem.GetColorValue().GetColor());
+
+    xDocShRef->DoClose();
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(SdImportTest);
